- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    Qt Creator 3.3.0-beta1
 - 
    None
 - 
    Windows 8.1, msvc2013
 
How to reproduce:
- Create a new class
 - Create a new property using QString foo
 - Open the QuickFix for generating missing property members
 
=> Crash with following backtrace:
Qt5Guid.dll!QTextLayout::lineCount() Line 804 C++ Qt5Widgetsd.dll!QPlainTextDocumentLayout::documentChanged(int from, int charsRemoved, int charsAdded) Line 291 C++ Qt5Guid.dll!QTextDocumentPrivate::finishEdit() Line 1217 C++ Qt5Guid.dll!QTextDocumentPrivate::endEditBlock() Line 1196 C++ Qt5Guid.dll!QTextCursor::endEditBlock() Line 2505 C++ TextEditord.dll!TextEditor::RefactoringFile::apply() Line 374 C++ CppEditord.dll!CppEditor::Internal::`anonymous namespace'::InsertQtPropertyMembersOp::perform() Line 4224 C++ CppEditord.dll!CppEditor::Internal::CppEditorWidget::performQuickFix(int index) Line 478 C++ CppEditord.dll!CppEditor::Internal::CppEditorWidget::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 254 C++ Qt5Cored.dll!QMetaObject::activate(QObject * sender, int signalOffset, int local_signal_index, void * * argv) Line 3716 C++ Qt5Cored.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 3582 C++ Qt5Cored.dll!QSignalMapper::mapped(int _t1) Line 168 C++ Qt5Cored.dll!QSignalMapper::map(QObject * sender) Line 247 C++ Qt5Cored.dll!QSignalMapper::map() Line 237 C++ Qt5Cored.dll!QSignalMapper::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 93 C++ Qt5Cored.dll!QMetaObject::activate(QObject * sender, int signalOffset, int local_signal_index, void * * argv) Line 3716 C++ Qt5Cored.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 3582 C++ Qt5Widgetsd.dll!QAction::triggered(bool _t1) Line 360 C++ Qt5Widgetsd.dll!QAction::activate(QAction::ActionEvent event) Line 1168 C++ Qt5Widgetsd.dll!QMenuPrivate::activateCausedStack(const QList<QPointer<QWidget> > & causedStack, QAction * action, QAction::ActionEvent action_e, bool self) Line 1004 C++ Qt5Widgetsd.dll!QMenuPrivate::activateAction(QAction * action, QAction::ActionEvent action_e, bool self) Line 1082 C++ Qt5Widgetsd.dll!QMenu::mouseReleaseEvent(QMouseEvent * e) Line 2403 C++ Qt5Widgetsd.dll!QWidget::event(QEvent * event) Line 8657 C++ Qt5Widgetsd.dll!QMenu::event(QEvent * e) Line 2516 C++ Qt5Widgetsd.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3748 C++ Qt5Widgetsd.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3306 C++ Qt5Cored.dll!QCoreApplication::notifyInternal(QObject * receiver, QEvent * event) Line 930 C++ Qt5Cored.dll!QCoreApplication::sendSpontaneousEvent(QObject * receiver, QEvent * event) Line 231 C++ Qt5Widgetsd.dll!QApplicationPrivate::sendMouseEvent(QWidget * receiver, QMouseEvent * event, QWidget * alienWidget, QWidget * nativeWidget, QWidget * * buttonDown, QPointer<QWidget> & lastMouseReceiver, bool spontaneous) Line 2777 C++ Qt5Widgetsd.dll!QWidgetWindow::handleMouseEvent(QMouseEvent * event) Line 405 C++ Qt5Widgetsd.dll!QWidgetWindow::event(QEvent * event) Line 174 C++ Qt5Widgetsd.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3748 C++ Qt5Widgetsd.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3190 C++ Qt5Cored.dll!QCoreApplication::notifyInternal(QObject * receiver, QEvent * event) Line 930 C++ Qt5Cored.dll!QCoreApplication::sendSpontaneousEvent(QObject * receiver, QEvent * event) Line 231 C++ Qt5Guid.dll!QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent * e) Line 1771 C++ Qt5Guid.dll!QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent * e) Line 1573 C++ Qt5Guid.dll!QWindowSystemInterface::sendWindowSystemEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 572 C++ qwindowsd.dll!QWindowsGuiEventDispatcher::sendPostedEvents() Line 82 C++ Qt5Cored.dll!qt_internal_proc(HWND__ * hwnd, unsigned int message, unsigned int wp, long lp) Line 414 C++
QTextLayout itself is 0
- resulted in
 - 
                    
QTCREATORBUG-13522 Wrong indentation after quickfix "Generate Missing Q_PROPERTY Members..."
-         
 - Closed
 
 -