TextEditor: Stop SnippetMode before invoking refactoring action

Task-number: QTCREATORBUG-13519
Change-Id: I206d83251c717dde419394658b5fdea8e5da48d3
Reviewed-by: David Schulz <david.schulz@theqtcompany.com>